# egel

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.foss  CMakeLists.old  CMakeLists.static  CMakeLists.txt  CMakeLists.vendor  LICENSE.md  NOTES.md  PITFALLS.md  PREBUILT.md  README.md  TODO.md  VERSION.md  build.sh  conf.mk  install.sh
.github/actions/apple-lightning/: action.yml
.github/actions/macos-ffi/: action.yml
.github/actions/macos-ffi-leech/: action.yml
.github/actions/macos-fmt/: action.yml
.github/actions/macos-fmt-leech/: action.yml
.github/actions/macos-icu/: action.yml
.github/actions/macos-icu-leech/: action.yml
.github/actions/macos-lightning/: action.yml
.github/actions/macos-lightning-leech/: action.yml
.github/actions/macos-prepare/: action.yml
.github/actions/macos-tar/: action.yml
.github/actions/ubuntu-lightning/: action.yml
.github/actions/ubuntu-prepare/: action.yml
.github/actions/ubuntu-tar/: action.yml
.github/actions/windows-prepare/: action.yml
.github/workflows/: apple-silicon.yml  cmake.yml  macos-arm64-leech.yml  macos-arm64.yml  main.yml  ubuntu-lightning.yml  ubuntu-x86_64.yml
bugs/: bug0-fixed.eg  bug0.eg  bug1-fixed.eg  bug2-fixed.eg  bug2-unfixed.eg  bug3-fixed.eg  bug4-fixed.eg  bug5-fixed.eg  bug5.eg  bug6-fixed.eg  bug6.eg
contrib/assets/: Makefile  README.md
contrib/ffi/: README.md
contrib/ffi/src/: Makefile  ffi.hpp  test.cpp
contrib/scripts/: egeldoc.eg  tarpackage.sh  version.sh
contrib/vim/ftdetect/: egel.vim
contrib/vim/syntax/: egel.vim
examples/: 100doors.eg  3or5.eg  99bottles.eg  abject.eg  ackermann.eg  assembler.eg  async.eg  bintrees.eg  booleans.eg  captcha-a.eg  captcha-b.eg  client.eg  colist.eg  command.sh  concurrent.eg  cps.eg  cycle.eg  dispatch.eg  dup.eg  e.eg  effect.eg  egeldoc.eg  environment.eg  exception.eg  featureA.eg  featureB.eg  featureC.eg  featureD.eg  featureE.eg  featureF.eg  featureG.eg  featureH.eg  fib.eg  fib.egg  fib_memo.eg  fix.eg  fizzbuzz.eg  format.eg  frp.eg  genfib.eg  (+44 more)
include/: calculate.eg  dictionary.eg  generator.eg  map.eg  prelude.eg  search.eg  tinydb.eg
include/io/: Makefile  channel.hpp  io.cpp
include/math/: Makefile  math.cpp
include/par/: Makefile  par.cpp
include/random/: Makefile  random.cpp
include/string/: Makefile  string.cpp
include/util/: Makefile  util.cpp  utils.cpp  utils.hpp
lib/: prelude.eg
lib/dict/: dict.cpp
lib/fs/: Makefile  fs.cpp  fs.ixx
lib/io/: Makefile  channel.hpp  io.cpp
lib/nand/: nand.hpp
lib/os/: channel.hpp  os.cpp  os.ixx
lib/par/: Makefile  par.cpp
lib/pqueue/: pqueue.cpp  pqueue.ixx
lib/python/: python.cpp
lib/random/: Makefile  random.cpp  random.ixx
lib/regex/: Makefile  regex.cpp  regex.ixx
lib/time/: time.cpp  time.ixx
man/: README.md  egel.1  egel.1.html  egel.1.md
optional/: README.md
optional/erpc/: CMakeLists.txt  README.md
optional/erpc/examples/: client0.eg  client1.eg  client2.eg  client3.eg  client4.eg  client_import.eg  client_large.eg  server.eg
optional/erpc/lib/: CMakeLists.txt  egel_rpc.cpp
optional/erpc/proto/: CMakeLists.txt  egel.proto
optional/grpc/: CMakeLists.txt  README.md
optional/grpc/examples/: client0.eg  client1.eg  client2.eg  client3.eg  client4.eg  client_large.eg  server.eg
optional/grpc/lib/: CMakeLists.txt  egel_rpc.cpp
optional/grpc/proto/: CMakeLists.txt  egel.proto
optional/grpc/src/: egel.proto  egel_rpc.cpp  egel_rpc.proto  utils.hpp
optional/lightning/: 42.eg  CMakeLists.txt  README.txt  list.eg  match.eg  million.eg  split.eg
optional/lightning/examples/: fail.eg  id.eg  million.eg  tuple.eg
optional/lightning/src/: instructions.hpp  light.cpp  lightning.cpp
optional/llvm/: CMakeLists.txt
optional/llvm/src/: instructions.hpp  llvm.cpp
optional/python/: CMakeLists.txt  README.md
optional/python/examples/: ack.py  test0.eg
optional/python/src/: python.cpp  utils.cpp  utils.hpp
python/: CMakeLists.txt  README.txt
python/examples/: fib.py  test0.eg  wxapp.eg  wxhello.eg
python/src/: python.cpp  utils.cpp
python/test/: test0.eg
src/: Makefile  allocate.hpp  assembler.hpp  assembler.ixx  ast.cpp  ast.hpp  ast.ixx  builtin.cpp  builtin.hpp  builtin_async.hpp  builtin_dict.hpp  builtin_eval.cpp  builtin_eval.hpp  builtin_eval.ixx  builtin_ffi.hpp  builtin_fs.hpp  builtin_math.cpp  builtin_math.hpp  builtin_math.ixx  builtin_nand.hpp  builtin_os.hpp  builtin_process.cpp  builtin_process.hpp  builtin_process.ixx  builtin_regex.hpp  builtin_runtime.cpp  builtin_runtime.hpp  builtin_runtime.ixx  builtin_string.cpp  builtin_string.hpp  builtin_string.ixx  builtin_system.cpp  builtin_system.hpp  builtin_system.ixx  builtin_thread.cpp  builtin_thread.hpp  builtin_thread.ixx  builtin_time.hpp  bytecode.hpp  bytecode.ixx  (+57 more)
src/builtin/: evaluate.cpp  evaluate.hpp  math.cpp  math.hpp  process.cpp  process.hpp  string.cpp  string.hpp  system.cpp  system.hpp  thread.cpp  thread.hpp
tests/: 3or5.eg  at.eg  bool.eg  catch.eg  concat.eg  featureA.eg  fib.eg  hello.eg  huge.eg  large.eg  large.py  leak.eg  map.eg  maplist.eg  maptest.eg  match.eg  million.eg  tailfac.eg  test00.eg  test01.eg  test02.eg  unicode.eg  var.eg  wildcard.eg
tests/ffi/: test.c  test.eg  test.sh
